# Funding-exp

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
Binance/: Binance.h  CMakeLists.txt
Binance/src/: BinanceHttp.h  HttpClient.h
FundingTraidingApp/: CMakeLists.txt  TraidingApp.cpp
FundingTraidingBot/: CMakeLists.txt  FundingTraidingBot.cpp  FundingTraidingBot.h
